--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 delay-queue = "0.2"
+clap = { version = "4.4", features = ["derive"] }
 
 [dev-dependencies]
 test_bin = "0.4"
